<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.genuitec.piplug</groupId>
	<artifactId>com.genuitec.piplug</artifactId>
	<version>1.0.0.qualifier</version>
	<packaging>pom</packaging>
	<name>com.genuitec.piplug :: parent</name>
	<description>com.genuitec.piplug parent</description>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<properties>
		<java.version>1.5</java.version>
		<maven.version>3.0</maven.version>
		<tycho.version>0.19.0</tycho.version>
		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>kepler</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/kepler</url>
		</repository>
		<repository>
			<id>piplug-target</id>
			<layout>p2</layout>
			<url>file:./com.genuitec.piplug.targetplatform/target/targetplatform-p2</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>sonatype-public</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
		</pluginRepository>
	</pluginRepositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<format>yyyyMMdd-HHmm</format>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
<!-- 						
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>ARM_le</arch>
						</environment>
 -->						
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.eclipse.tycho</groupId>
										<artifactId>
											tycho-packaging-plugin
										</artifactId>
										<versionRange>[0.18.1,)</versionRange>
										<goals>
											<goal>validate-id</goal>
											<goal>validate-version</goal>
											<goal>
												build-qualifier-aggregator
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-clean-plugin
										</artifactId>
										<versionRange>[2.4.1,)</versionRange>
										<goals>
											<goal>clean</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>../com.genuitec.piplug.api</module>
		<module>../com.genuitec.piplug.ui</module>
		<module>../com.genuitec.piplug.app.clock</module>
		<module>../com.genuitec.piplug.app.infocom</module>
		<module>../com.genuitec.piplug.app.infocom.zork1</module>
		<module>../com.genuitec.piplug.app.infocom.zork2</module>
		<module>../com.genuitec.piplug.app.infocom.zork3</module>
		<!-- <module>com.genuitec.piplug.feature</module> <module>com.genuitec.piplug.site</module> -->
		<module>com.genuitec.piplug.product</module>
	</modules>
</project>